@@ -7,9 +7,10 @@ h2. Changelog
 h3. Version 0.4.x
 
 |_. Date|_. Description|_. Ticket|
+|2010/09/18|Add MCollective.version, set it during packaging and include it in the rpcutil agent|134|
 |2010/09/13|mc-inventory now use SimpleRPC and the rpcutil agent and display server stats|133|
 |2010/09/13|Make the path to the rpc-help.erb configurable and set sane default|130|
-|2010/09/13|Make the configfile used available in the Config class and add to prcutil|132|
+|2010/09/13|Make the configfile used available in the Config class and add to rpcutil|132|
 |2010/09/12|Rework internal statistics and add a rpcutil agent|129|
 |2010/09/12|Fix internal memory structures related to agent meta data|128|
 |2010/08/24|Update the OpenBSD port for changes in 0.4.8 tarball|125|
